k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: crm
  labels:
    app: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

      - name: frontend

        image: dinesh3715/crm-frontend:latest

        imagePullPolicy: Always

        ports:

        - containerPort: 80

        readinessProbe:

          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:

          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 20
          periodSeconds: 20

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "300m"
            memory: "256Mi"
