k8s/postgres-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: postgres
  namespace: crm

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:

      containers:

      - name: postgres

        image: postgres:16

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5432

        volumeMounts:

        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

      volumes:

      - name: postgres-storage

        emptyDir: {}
