k8s/backend-service.yaml
apiVersion: v1

kind: Service

metadata:

  name: backend-service

  namespace: crm

spec:

  selector:

    app: backend

  ports:

  - port: 8000

    targetPort: 8000

  type: ClusterIP
